--- a/src/app/perfil-info/perfil-info.component.html
+++ b/src/app/perfil-info/perfil-info.component.html
@@ -51,7 +51,10 @@
                             </div>
                         </div>
                     </div>
-                    <button (click)="onModifyUserClick()">Guardar Cambios</button>
+                </div>
+                <div class="storage-buttons">
+                    <button class="save-changes" (click)="onModifyUserClick()">Guardar Cambios</button>
+                    <button class="delete-account" (click)="onDeleteUserClick()">Eliminar Cuenta</button>
                 </div>
             </div>
         </div>
