--- a/src/app/perfil-info/perfil-info.component.css
+++ b/src/app/perfil-info/perfil-info.component.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .perfil-img-container {
@@ -119,5 +120,14 @@ button {
 .delete-account {
     margin-right: 40px;
     background-color: red;
+}
+
+.session-buttons button {
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 16px;
+    margin: 10px;
+    width: auto;
 }
   
