--- a/src/app/manage-members-pop-up/manage-members-pop-up.component.html
+++ b/src/app/manage-members-pop-up/manage-members-pop-up.component.html
@@ -6,7 +6,7 @@
     <div class="input-filtering">
       <div class="input-manage-members">
         <input type="text" name="" id="searchInput" #inputUserName placeholder="Buscar Usuario" (input)="filterNames()">
-        <i class="fa-solid fa-plus"></i>
+        <i #icono class="fa-solid fa-plus"></i>
       </div>
 
       <ul id="namesDropdown" #namesDropdown class="dropdown" style="display:none;">
@@ -22,18 +22,31 @@
     </div>
 
     <div class="members-data">
-        <table>
-            <thead>
-                <tr>
-                    <th>Nombre</th>
-                    <th>Usuario</th>
-                    <th>Correo</th>
-                    <th>Rol</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+      <table>
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Usuario</th>
+            <th>Correo</th>
+            <th>Rol</th> <!-- Se añade el encabezado para el campo de rol -->
+          </tr>
+        </thead>
+        <tbody>
+          <ng-container *ngIf="organization && organization.members">
+            <tr *ngFor="let member of organization.members">
+              <td>{{ member.name }}</td>
+              <td>{{ member.username }}</td>
+              <td>{{ member.email }}</td>
+              <td>
+                <select (change)="changeRole(member, $event)" [disabled]="checkIfUserIsAdmin(member)">
+                  <option value="admin" [selected]="member.role === 'admin'">Admin</option>
+                  <option value="member" [selected]="member.role === 'member'">Miembro</option>
+                </select>
+              </td>
+            </tr>
+          </ng-container>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
