--- a/src/app/admin-organizations/admin-organizations.component.html
+++ b/src/app/admin-organizations/admin-organizations.component.html
@@ -2,7 +2,7 @@
     <app-login *ngIf="authService.isLoginOpen$()  | async"></app-login>
     <app-register *ngIf="authService.isRegisterOpen$()  | async"></app-register>
     <app-manage-members-pop-up [organization]="selectedOrganization" *ngIf="manageMembersService.isOpen$ | async"></app-manage-members-pop-up>
-    <app-manage-activities-pop-up *ngIf="addActivitiesPopUP.isOpen$ | async"></app-manage-activities-pop-up>
+    <app-manage-activities-pop-up [user]="user" [organization]="selectedOrganization" *ngIf="addActivitiesPopUP.isOpen$ | async"></app-manage-activities-pop-up>
     <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
         <app-header></app-header>
         <div class="admin-container">
