--- a/src/app/admin-activities/admin-activities.component.html
+++ b/src/app/admin-activities/admin-activities.component.html
@@ -27,21 +27,21 @@
                             <div class="event-data">
                                 <p>Titulo</p>
                                 <div class="input-container">
-                                  <input type="text" name="" id="noactive" #inputTitulo placeholder="ej.: Producción de Software" readonly>
+                                  <input type="text" name="" class="noactive" #inputTitulo placeholder="ej.: Producción de Software" readonly>
                                   <i class="fa fa-pencil" (click)="toggleEditMode(inputTitulo)"></i>
                                 </div>
                               </div>
                               <div class="event-data">
                                 <p>Descripción</p>
                                 <div class="input-container">
-                                  <input type="text" name="" id="noactive" #inputDescripcion placeholder="ej.: ..." readonly>
+                                  <input type="text" name="" class="noactive" #inputDescripcion placeholder="ej.: ..." readonly>
                                   <i class="fa fa-pencil" (click)="toggleEditMode(inputDescripcion)"></i>
                                 </div>
                               </div>
                               <div class="event-data">
                                 <p>Grupos</p>
                                 <div class="input-container">
-                                  <input type="email" name="" id="noactive" #inputGrupos placeholder="ej.: Grupo 41, Grupo 42" readonly>
+                                  <input type="email" name="" class="noactive" #inputGrupos placeholder="ej.: Grupo 41, Grupo 42" readonly>
                                   <i class="fa fa-pencil" (click)="toggleEditMode(inputGrupos)"></i>
                                 </div>
                             </div>
