--- a/src/app/admin-create-organization/admin-create-organization.component.css
+++ b/src/app/admin-create-organization/admin-create-organization.component.css
@@ -91,21 +91,23 @@ button {
     padding: 15px 20px;
 }
 
-input {
-    border: none;
+.event-data  input {
+    border: 2px solid transparent;
+    width: 15em;
+    height: 2.5em;
+    padding-left: 0.8em;
     outline: none;
-    border-radius: 15px;
-    padding: 1em;
-    background-color: #ccc;
-    box-shadow: inset 2px 5px 10px rgba(0,0,0,0.3);
-    transition: 300ms ease-in-out;
+    overflow: hidden;
+    background-color: #fff;
+    border-radius: 10px;
+    transition: all 0.5s;
+    border: 1px solid black;
 }
 
-input:focus {
+.event-data  input:hover, .event-data  input:focus {
+    box-shadow: 0px 0px 0px 7px rgb(74, 157, 236, 20%);
     background-color: white;
-    transform: scale(1.05);
-    box-shadow: 13px 13px 100px #969696,
-                -13px -13px 100px #ffffff;
+    outline: none;
 }
 
 select {
@@ -114,5 +116,5 @@ select {
     border: none;
     font-size: 16px;
     border-radius: 5px;
-    background-color: #ccc;
+    border: 1px solid black;
 }
