--- a/src/app/admin-organizations/admin-organizations.component.html
+++ b/src/app/admin-organizations/admin-organizations.component.html
@@ -29,42 +29,42 @@
                             <div class="event-data">
                                 <p>Nombre</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id="noactive" #inputTitulo [value]="selectedOrganization?.name" readonly>
+                                    <input type="text" name="" class="noactive" #inputTitulo [value]="selectedOrganization?.name" readonly>
                                     <i class="fa fa-pencil" (click)="toggleEditMode(inputTitulo)"></i>
                                 </div>
                                 </div>
                             <div class="event-data">
                                 <p>Descripción</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id="noactive" #inputDescripcion [value]="selectedOrganization?.description" readonly>
+                                    <input type="text" name="" class="noactive" #inputDescripcion [value]="selectedOrganization?.description" readonly>
                                     <i class="fa fa-pencil" (click)="toggleEditMode(inputDescripcion)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Correo electrónico</p>
                                 <div class="input-container">
-                                    <input type="email" name="" id="noactive"  #inputCorreo [value]="selectedOrganization?.email" readonly>
+                                    <input type="email" name="" class="noactive"  #inputCorreo [value]="selectedOrganization?.email" readonly>
                                     <i class="fa fa-pencil" (click)="toggleEditMode(inputCorreo)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Dominio</p>
                                 <div class="input-container">
-                                    <input type="url" name="" id="noactive" #inputDominio [value]="selectedOrganization?.domain"  readonly>
+                                    <input type="url" name="" class="noactive" #inputDominio [value]="selectedOrganization?.domain"  readonly>
                                     <i class="fa fa-pencil" (click)="toggleEditMode(inputDominio)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Contacto</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id="noactive" #inputContacto [value]="selectedOrganization?.contact" readonly>
+                                    <input type="text" name="" class="noactive" #inputContacto [value]="selectedOrganization?.contact" readonly>
                                     <i class="fa fa-pencil" (click)="toggleEditMode(inputContacto)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Privacidad</p>
                                 <div class="input-container">
-                                    <select name="" id="noactive" #selectPrivacidad disabled>
+                                    <select name="" class="noactive" #selectPrivacidad disabled>
                                         <option [selected]="selectedOrganization?.privacy === 'Público'" value="Público">Público</option>
                                         <option [selected]="selectedOrganization?.privacy === 'Privado'" value="Privado">Privado</option>
                                       </select>
