Haciendo gestionar grupo

--- a/src/app/admin-groups/admin-groups.component.html
+++ b/src/app/admin-groups/admin-groups.component.html
@@ -14,15 +14,15 @@
                         <div class="event-filter">
                             <div class="filter">
                                 <p><strong>ORGANIZACIONES</strong></p>
-                                <select name="" id=""></select>
+                                <select name="" id="organizacion"></select>
                             </div>
                             <div class="filter">
                                 <p><strong>ACTIVIDADES</strong></p>
-                                <select name="" id=""></select>
+                                <select name="" id="actividad"></select>
                             </div>
                             <div class="filter">
                                 <p><strong>GRUPOS</strong></p>
-                                <select name="" id=""></select>
+                                <select name="" id="grupo"></select>
                             </div>
                         </div>
                         <div class="event-description">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="buttons">
                     <button (click)="manageMembers()">Gestionar miembros</button>
-                    <button (click)="onModifyUserClick()">Guardar</button>
+                    <button (click)="putGroup()">Guardar</button>
                 </div>
             </div>
         </div>
