--- a/src/app/admin-activities/admin-activities.component.html
+++ b/src/app/admin-activities/admin-activities.component.html
@@ -15,7 +15,8 @@
                         <div class="event-filter">
                             <div class="filter">
                                 <p><strong>ORGANIZACIONES</strong></p>
-                                <select name="" id=""></select>
+                                <select name="" id="">
+                                </select>
                             </div>
                             <div class="filter">
                                 <p><strong>ACTIVIDADES</strong></p>
