--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -44,6 +44,14 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.card:hover {
+    filter: none !important;
+    z-index: 10;
+    transform: scale(1.05);
+    transition: filter 0.5s ease, transform 0.3s ease, z-index 0s;
+    border: 2px solid black;
+}
+
 .long {
     grid-row: span 15;
     display: flex;
