--- a/src/app/group-add-pop-up/group-add-pop-up.component.html
+++ b/src/app/group-add-pop-up/group-add-pop-up.component.html
@@ -5,7 +5,7 @@
     <div class="group-add-content">
         <div class="group-add-name">
             <h4>Nombre: </h4>
-            <input type="text" required>
+            <input type="text" required #inputGroupName>
         </div>
         <div class="group-add-privacy">
             <h4>Privacidad:</h4>
@@ -16,7 +16,7 @@
         </div>
         <div class="group-add-description">
             <h4>Descripción:</h4>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <textarea name="" id="" cols="30" rows="10" #inputGroupDescription></textarea>
         </div>
     </div>
     <div class="group-add-add">
