--- a/src/app/admin-activities/admin-activities.component.html
+++ b/src/app/admin-activities/admin-activities.component.html
@@ -1,7 +1,7 @@
 <div>
     <app-login *ngIf="authService.isLoginOpen$()  | async"></app-login>
     <app-register *ngIf="authService.isRegisterOpen$()  | async"></app-register>
-    <app-group-add-pop-up *ngIf="addGroup.isOpen$ | async"></app-group-add-pop-up>
+    <app-group-add-pop-up [activity]="selectedActivity" [organization]="selectedOrganization" [user]="user" *ngIf="addGroup.isOpen$ | async"></app-group-add-pop-up>
     <app-manage-members-pop-up *ngIf="manageMembersService.isOpen$ | async"></app-manage-members-pop-up>
     <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
         <app-header></app-header>
