--- a/src/app/organizations/organizations.component.html
+++ b/src/app/organizations/organizations.component.html
@@ -1,179 +1,34 @@
 <div>
-    <app-login *ngIf="authService.isLoginOpen$()  | async"></app-login>
-    <app-register *ngIf="authService.isRegisterOpen$()  | async"></app-register>
-    <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
-        <app-header></app-header>
+  <app-login *ngIf="authService.isLoginOpen$()  | async"></app-login>
+  <app-register *ngIf="authService.isRegisterOpen$()  | async"></app-register>
+  <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
+    <app-header></app-header>
 
-        <div  class="organizations-container">
-            <div class="organizations-filters">
-                <input type="text" name="" id="organization-search" placeholder="BUSCAR ORGANIZACIONES...">
-                <button>Filtrar <i class="fa fa-filter"></i></button>
+    <div class="organizations-container">
+      <div class="organizations-filters">
+        <input type="text" name="" id="organization-search" placeholder="BUSCAR ORGANIZACIONES..." #searchInput
+               (input)="searchOrganizations(searchInput.value)">
+        <button>Filtrar <i class="fa fa-filter"></i></button>
+      </div>
+      <div class="grid-organizations">
+        <ng-container *ngFor="let organization of organizations">
+          <a href="/activities">
+            <div class="organization">
+              <div class="content-organization">
+                <h1>{{ organization.name }}</h1>
+                <h2>Descripción</h2>
+                <p>{{ organization.description }}</p>
+                <p><strong>Miembros: </strong> {{ organization.members.length }}</p>
+                <p><strong>Actividades: </strong> {{ organization.activities.length }}</p>
+              </div>
+              <div class="img-organization">
+                <img [src]="organization.imageUrl" alt="">
+              </div>
             </div>
-            <div class="grid-organizations">
-                <a href="/activities">
-                    <div class="organization">
-                        <div class="content-organization">
-                            <h1>Organizacion</h1>
-                            <h2>Descripcion</h2>
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar
-                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac
-                                ligula in libero volutpat consequat. Nulla facilisi.
-                            </p>
-                            <p><strong>Miembros: </strong> XX</p>
-                            <p><strong>Actividades: </strong> XX</p>
-                        </div>
-                        <div class="img-organization">
-                            <img src="../../assets/img/icono_ULPGC.png" alt="">
-                        </div>
-                    </div>
-                </a>
-                <a href="/activities">
-                    <div class="organization">
-                        <div class="content-organization">
-                            <h1>Organizacion</h1>
-                            <h2>Descripcion</h2>
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar
-                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac
-                                ligula in libero volutpat consequat. Nulla facilisi.
-                            </p>
-                            <p><strong>Miembros: </strong> XX</p>
-                            <p><strong>Actividades: </strong> XX</p>
-                        </div>
-                        <div class="img-organization">
-                            <img src="../../assets/img/icono_ULPGC.png" alt="">
-                        </div>
-                    </div>
-                </a>
-                <a href="/activities">
-                    <div class="organization">
-                        <div class="content-organization">
-                            <h1>Organizacion</h1>
-                            <h2>Descripcion</h2>
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar
-                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac
-                                ligula in libero volutpat consequat. Nulla facilisi.
-                            </p>
-                            <p><strong>Miembros: </strong> XX</p>
-                            <p><strong>Actividades: </strong> XX</p>
-                        </div>
-                        <div class="img-organization">
-                            <img src="../../assets/img/icono_ULPGC.png" alt="">
-                        </div>
-                    </div>
-                </a>
-                <a href="/activities">
-                    <div class="organization">
-                        <div class="content-organization">
-                            <h1>Organizacion</h1>
-                            <h2>Descripcion</h2>
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar
-                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac
-                                ligula in libero volutpat consequat. Nulla facilisi.
-                            </p>
-                            <p><strong>Miembros: </strong> XX</p>
-                            <p><strong>Actividades: </strong> XX</p>
-                        </div>
-                        <div class="img-organization">
-                            <img src="../../assets/img/icono_ULPGC.png" alt="">
-                        </div>
-                    </div>
-                </a>
-                <a href="/activities">
-                    <div class="organization">
-                        <div class="content-organization">
-                            <h1>Organizacion</h1>
-                            <h2>Descripcion</h2>
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar
-                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac
-                                ligula in libero volutpat consequat. Nulla facilisi.
-                            </p>
-                            <p><strong>Miembros: </strong> XX</p>
-                            <p><strong>Actividades: </strong> XX</p>
-                        </div>
-                        <div class="img-organization">
-                            <img src="../../assets/img/icono_ULPGC.png" alt="">
-                        </div>
-                    </div>
-                </a>
-                <a href="/activities">
-                    <div class="organization">
-                        <div class="content-organization">
-                            <h1>Organizacion</h1>
-                            <h2>Descripcion</h2>
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar
-                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac
-                                ligula in libero volutpat consequat. Nulla facilisi.
-                            </p>
-                            <p><strong>Miembros: </strong> XX</p>
-                            <p><strong>Actividades: </strong> XX</p>
-                        </div>
-                        <div class="img-organization">
-                            <img src="../../assets/img/icono_ULPGC.png" alt="">
-                        </div>
-                    </div>
-                </a>
-                <a href="/activities">
-                    <div class="organization">
-                        <div class="content-organization">
-                            <h1>Organizacion</h1>
-                            <h2>Descripcion</h2>
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar
-                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac
-                                ligula in libero volutpat consequat. Nulla facilisi.
-                            </p>
-                            <p><strong>Miembros: </strong> XX</p>
-                            <p><strong>Actividades: </strong> XX</p>
-                        </div>
-                        <div class="img-organization">
-                            <img src="../../assets/img/icono_ULPGC.png" alt="">
-                        </div>
-                    </div>
-                </a>
-                <a href="/activities">
-                    <div class="organization">
-                        <div class="content-organization">
-                            <h1>Organizacion</h1>
-                            <h2>Descripcion</h2>
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar
-                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac
-                                ligula in libero volutpat consequat. Nulla facilisi.
-                            </p>
-                            <p><strong>Miembros: </strong> XX</p>
-                            <p><strong>Actividades: </strong> XX</p>
-                        </div>
-                        <div class="img-organization">
-                            <img src="../../assets/img/icono_ULPGC.png" alt="">
-                        </div>
-                    </div>
-                </a>
-                <a href="/activities">
-                    <div class="organization">
-                        <div class="content-organization">
-                            <h1>Organizacion</h1>
-                            <h2>Descripcion</h2>
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar
-                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac
-                                ligula in libero volutpat consequat. Nulla facilisi.
-                            </p>
-                            <p><strong>Miembros: </strong> XX</p>
-                            <p><strong>Actividades: </strong> XX</p>
-                        </div>
-                        <div class="img-organization">
-                            <img src="../../assets/img/icono_ULPGC.png" alt="">
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <app-footer></app-footer>
+          </a>
+        </ng-container>
+      </div>
     </div>
+    <app-footer></app-footer>
+  </div>
 </div>
