Frontend filtering of organizations.component.html

--- a/src/app/organizations/organizations.component.html
+++ b/src/app/organizations/organizations.component.html
@@ -11,7 +11,7 @@
         <button>Filtrar <i class="fa fa-filter"></i></button>
       </div>
       <div class="grid-organizations">
-        <ng-container *ngFor="let organization of organizations">
+        <ng-container *ngFor="let organization of shownOrganizations">
           <a href="/activities">
             <div class="organization">
               <div class="content-organization">
